@@ -7,8 +7,14 @@ custom_actions:
         - members:
             - method: POST
               action_type: update
+            - method: GET
+              action_type: read/list
 
   shared-images:
     member:
       - method: GET
         action_type: read/list
+
+  tasks:
+    - method: GET
+      action_type: read/list
