@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* add keystone and tests
 * update docs
 * fix swift test
 * regex for neutron tags path
